<resources>

    <string name="app_name">MungMate</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="chip_all">전체보기</string>
    <string name="chip_daily">일상보기</string>
    <string name="chip_walk_log">산책일지</string>
    <string name="place_review">장소후기</string>
    <string name="favorite">좋아요</string>
    <string name="comment">댓글 </string>
    <string name="reply">답글 </string>
    <string name="community_title">커뮤니티</string>
    <string name="community_post_detail">게시글 상세</string>
    <string name="community_writing">글 작성</string>
    <string name="community_modify">글 수정</string>
    <string name="complete">완료</string>
    <string name="modify_complete">수정완료</string>
    <string name="community_post_title">제목을 입력하세요.</string>
    <string name="community_post_writing_category">카테고리를 선택하세요.</string>
    <string name="community_post_writing_contentText">내용을 입력하세요.\n( 내용 최대 300자 이내, 사진 최대 5장 이내)</string>
    <string name="post_modify_text">글 수정하기</string>
    <string name="post_delete_text">글 삭제하기</string>
    <string name="post_report_text">글 신고하기</string>
    <string name="post_comment_delete_text">댓글 삭제하기</string>
    <string name="walk_record_title">산책기록</string>
    <string name="today_walking_record">오늘 산책 기록</string>
    <string name="monthly_walking_record">이달의 산책 기록</string>

    <string name="place_date_distinction">·</string>
    <string name="category">카테고리</string>
    <string name="search">검색</string>
    <string name="search_hint">검색어를 입력해주세요</string>

    <string name="kakao_login">카카오로 시작하기</string>
    <string name="google_login">Google로 시작하기</string>
    <string name="mate_main">멍메이트</string>
    <string name="mate_description">반려동물 산책 매칭 플랫폼</string>
    <string name="copyright">Copyright &#169; Petpal</string>
    <string name="product_registration">상품 등록</string>
    <string name="product_Image">상품 이미지</string>
    <string name="main_image_count">0/5</string>
    <string name="prompt_product_name">상품명</string>
    <string name="input_option">옵션을 입력해주세요.(최대 5개)</string>
    <string name="prompt_description_image">상품 설명 이미지 (1개)</string>
    <string name="prompt_description_context">상품 설명</string>
    <string name="label_description_image_count">0/1</string>
    <string name="product_registration_button">상품 등록</string>
    <string name="button_delete_image">이미지 삭제 버튼</string>
    <string name="representative_photo">대표사진</string>
    <string name="nickname_error">8자 이내의 닉네임을 입력해주세요.</string>


    <string name="product_registration_contentText">내용을 입력하세요.\n( 내용 최대 300자 이내)</string>

    <string name="kakao_api_key">29842459a2117277a50ac661f2f7e089</string>

    <string name="web_client_id">952517903388-uv2c0ms0p7abt2jk6ou9f88knb720bkt.apps.googleusercontent.com</string>

    <string name="cancel">취소</string>
    <string name="check">확인</string>
    <string name="delete_dialog_title">정말 게시글을 삭제하시겠습니까?</string>
    <string name="community_comment_EditText">댓글을 입력하세요.</string>
    <string name="community_reply_EditText">답글을 입력하세요.</string>

    <!-- 견종 문자열 배열 -->
    <string-array name="dog_breeds">
        <item>골든 리트리버</item>
        <item>래브라도 리트리버</item>
        <item>시베리안 허스키</item>
        <item>달마시안</item>
        <item>불독</item>
        <item>포메라니안</item>
        <item>보더 콜리</item>
        <item>치와와</item>
        <item>불링턴 테리어</item>
        <item>요크셔 테리어</item>
        <item>비글</item>
        <item>푸들</item>
        <item>세터</item>
        <item>그레이 하운드</item>
        <item>로트와일러</item>
        <item>보스턴 테리어</item>
        <item>킹 찰스 스패니얼</item>
        <item>래트 테리어</item>
        <item>시추</item>
        <item>도베르만 핀셔</item>
        <item>불도그</item>
        <item>코카 스패니얼</item>
        <item>스코티쉬 테리어</item>
        <item>베들링턴 테리어</item>
        <item>레온베르거</item>
        <item>잉글리시 불독</item>
        <item>뉴펀들랜드</item>
        <item>웰시 코기</item>
    </string-array>


    <string-array name="productRegistrationCategoryList">
        <item>사료</item>
        <item>간식</item>
        <item>배변</item>
        <item>목욕</item>
        <item>의료&amp;장난감</item>
        <item>영양제</item>
    </string-array>

    <string-array name="communityCategoryList">
        <item>일상</item>
        <item>산책일지</item>
        <item>산책 메이트 구해요</item>
        <item>장소 후기</item>
        <item>애견용품 후기</item>
        <item>시츄 아지트</item>
        <item>푸들 아지트</item>
        <item>포메라니안 아지트</item>
        <item>치와와 아지트</item>
        <item>몰티즈 아지트</item>
        <item>진돗개 아지트</item>
        <item>리트리버 아지트</item>
        <item>웰시 코기 아지트</item>
        <item>나머지 아이들 아지트</item>
    </string-array>

</resources>