<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".user.UserStartFragment">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/startMainImageView"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_gravity="center"
        android:layout_marginTop="96dp"
        android:layout_marginBottom="24dp"
        android:src="@drawable/main_image"
        app:civ_border_color="#FFFFFF"
        app:civ_border_overlay="true"
        app:civ_border_width="1dp" />

    <TextView
        android:id="@+id/startAppName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:text="@string/mate_main"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/md_theme_light_primary"
        android:textSize="28sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/startAppDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="64dp"
        android:gravity="center"
        android:text="@string/mate_description"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/md_theme_light_primary"
        android:textSize="16sp" />

    <Button
        android:id="@+id/kakaoLoginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/kakao_login_btn_backgroundTint"
        android:drawableLeft="@drawable/kakao_logo_18"
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:text="@string/kakao_login"
        android:textColor="#000000" />

    <Button
        android:id="@+id/googleLoginButton"
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:backgroundTint="#FFFFFF"
        android:drawableLeft="@drawable/google_logo_18"
        android:text="@string/google_login"
        android:textColor="#000000" />

    <ImageView
        android:id="@+id/startSubImageView"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_gravity="right"
        android:layout_marginBottom="32dp"
        tools:src="@drawable/sub_image" />

    <TextView
        android:id="@+id/startCopyright"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/copyright"
        android:textColor="@color/md_theme_light_primary"
        android:textSize="12sp"/>
</LinearLayout>