<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_rounded"
    android:gravity="center"
    android:minWidth="300dp"
    android:orientation="vertical"
    android:padding="20dp">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/titleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        style="@style/TextAppearance.Material3.LabelLarge"
        android:minHeight="50dp"
        android:text="@string/delete_dialog_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_margin"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/cancelButton"
            style="@style/Widget.Material3.Button"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginEnd="7dp"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:backgroundTint="@color/dialog_cancel_color"
            android:text="@string/cancel" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/checkButton"
            style="@style/Widget.Material3.Button"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:backgroundTint="@color/design_default_color_error"
            android:text="@string/check" />

    </LinearLayout>

</LinearLayout>