<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ProductRegistrationFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbarProductAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:navigationIcon="@drawable/arrow_back_24px"
        app:navigationIconTint="@color/white"
        app:title="@string/product_registration"
        app:titleTextColor="@color/white" />

    <ScrollView
        android:id="@+id/scrollViewProductAdd"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/common_margin"
                android:text="@string/product_Image"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/common_margin"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/buttonAddMainImage"
                    style="@style/Widget.Material3.Button.IconButton.Outlined"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginEnd="5dp"
                    android:insetLeft="0dp"
                    android:insetTop="0dp"
                    android:insetRight="0dp"
                    android:insetBottom="0dp"
                    android:text="@string/main_image_count"
                    app:cornerRadius="5dp"
                    app:icon="@drawable/image"
                    app:iconGravity="textTop"
                    app:iconPadding="5dp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerViewMainImage"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:isScrollContainer="true"
                    android:orientation="horizontal">

                </androidx.recyclerview.widget.RecyclerView>

            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/common_margin"
                android:hint="@string/prompt_product_name"
                android:transitionGroup="true"
                app:endIconMode="clear_text"
                app:errorEnabled="false"
                tools:transitionGroup="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputEditTextProductName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutCategoryMain"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/common_margin"
                android:hint="@string/category"
                android:transitionGroup="true"
                app:errorEnabled="false"
                tools:transitionGroup="true">

                <com.google.android.material.textfield.MaterialAutoCompleteTextView
                    android:id="@+id/dropdownCategory"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    app:simpleItems="@array/productRegistrationCategoryList" />
            </com.google.android.material.textfield.TextInputLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/common_margin">

                <com.google.android.flexbox.FlexboxLayout
                    android:id="@+id/flexBoxLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:alignContent="stretch"
                    app:alignItems="stretch"
                    app:flexWrap="wrap">

                    <EditText
                        android:id="@+id/flexBoxLayoutEditText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/input_option"
                        android:imeOptions="actionDone"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:inputType="text|textCapWords"
                        app:layout_flexGrow="1"/>

                </com.google.android.flexbox.FlexboxLayout>

            </FrameLayout>

            <TextView
                android:id="@+id/textViewDescriptionImageTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/common_margin"
                android:text="@string/prompt_description_image"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <LinearLayout
                android:id="@+id/linearDescriptionImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/buttonAddDescImage"
                    style="@style/Widget.Material3.Button.IconButton.Outlined"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginEnd="5dp"
                    android:insetLeft="0dp"
                    android:insetTop="0dp"
                    android:insetRight="0dp"
                    android:insetBottom="0dp"
                    android:text="@string/label_description_image_count"
                    app:cornerRadius="5dp"
                    app:icon="@drawable/image"
                    app:iconGravity="textTop"
                    app:iconPadding="5dp" />

            </LinearLayout>

            <TextView
                android:id="@+id/textViewDescriptionTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/common_margin"
                android:text="@string/prompt_description_image"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/productRegistrationFragmentTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_marginBottom="@dimen/common_padding"
                android:gravity="top"
                android:padding="@dimen/common_small_padding"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/productRegistrationFragmentTextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="top"
                    android:hint="@string/community_post_writing_contentText"
                    android:maxLength="300" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>
    </ScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonNext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/product_registration_button" />

</LinearLayout>