<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.community.CommunityWritingFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/communityWritingToolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/community_writing" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/communityWritingToolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/communityPostWritingTitleTextInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/community_post_title"
                android:padding="@dimen/common_padding"
                app:endIconMode="clear_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/communityPostWritingTitleTextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLength="30" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/communityPostCategory"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/common_padding"
                android:layout_marginEnd="@dimen/common_padding"
                android:hint="@string/community_post_writing_category"
                app:layout_constraintEnd_toEndOf="@id/communityPostWritingTitleTextInputLayout"
                app:layout_constraintStart_toStartOf="@id/communityPostWritingTitleTextInputLayout"
                app:layout_constraintTop_toBottomOf="@id/communityPostWritingTitleTextInputLayout">

                <AutoCompleteTextView
                    android:id="@+id/categoryItem"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    app:simpleItems="@array/communityCategoryList" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/communityPostWritingContentTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:layout_margin="@dimen/common_margin"
                android:layout_marginBottom="@dimen/common_padding"
                android:gravity="top"
                app:hintEnabled="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/communityPostCategory">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/communityPostWritingContentTextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="top"
                    android:hint="@string/community_post_writing_contentText"
                    android:maxLength="300" />

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:id="@+id/communityWritingPostImageLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginStart="@dimen/common_margin"
                android:layout_marginTop="@dimen/common_margin"
                android:layout_marginEnd="@dimen/common_margin"
                android:layout_marginBottom="@dimen/common_margin"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/communityPostWritingContentTextInputLayout">

                <Button
                    android:id="@+id/communityWritingImageButton"
                    style="@style/Widget.Material3.Button.IconButton.Outlined"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginEnd="5dp"
                    android:insetLeft="0dp"
                    android:insetTop="0dp"
                    android:insetRight="0dp"
                    android:insetBottom="0dp"
                    android:text="@string/main_image_count"
                    app:cornerRadius="5dp"
                    app:icon="@drawable/image"
                    app:iconGravity="textTop"
                    app:iconPadding="5dp" />


                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/communityWritingPostImageHorizontalRecyclerView"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:isScrollContainer="true"
                    android:orientation="horizontal" />

            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_gravity="center"
        android:visibility="gone" />
</androidx.constraintlayout.widget.ConstraintLayout>